--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,29 @@
 @import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+:root {
+  --text-color: #4f4f4f;
+  --red-color: #ff0000;
+  --blue-color: #0073ff;
+  --secondary-bg: #f2f2f2;
+}
+
+.fjallaOne {
+  font-family: var(--font-fjalla-one), sans-serif;
+}
+
+.robotoSlab {
+  font-family: var(--font-roboto-slab), sans-serif;
+}
+
+@layer components {
+  .header-list {
+    @apply text-[var(--text-color)] text-xl cursor-pointer;
+    font-family: var(--font-fjalla-one), sans-serif;
+  }
 }
